2010-03-29  Zoltan Varga  <vargaz@gmail.com>

	* mph.h: Applied some changes from the openbsd ports tree to fix openbsd
	support.

2010-03-23  Andreas Faerber  <andreas.faerber@web.de>

	* old-map.c (map_Mono_Posix_Signals): Fix build for platforms where
	SIGIO is not defined (Haiku).
	
	Code is contributed under MIT/X11 license.

2010-02-23  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* serial.cs: Add 921600 to the list of possible baud rates, and
	use it only if defined, as is not available in all the unix systems.
	Fixes #445520.

2010-01-28 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* zlib-helper.c: no need for sync flush when compressing.
	Thanks to Hin-Tak Leung.

2010-01-28  Rodrigo Kumpera  <rkumpera@novell.com>

	* serial.c: Fix the OSX build.

2010-01-22 Leszek Ciesielski <skolima@gmail.com>
	
	* serial.c: baud rate 460800 by Thad Thompson <TThompson@nucsafe.com>
	* serial.c: report errors from every function

2009-12-16 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* zlib-helper.c: when finishing uncompressing a buffer, we might need
	more than one call to deflate with Z_FINISH since the uncompressed
	data can take more space than the allocated buffer.

	Fixes the IPY+Chiron test case.

2009-10-24 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* zlib-helper.c: stop trying to decompress when we get Z_STREAM_END.
	Patch by Ives Bastide. Fixes bug #549942.

2009-09-21 Leszek Ciesielski <skolima@gmail.com>

	* serial.c: return -1 from close() on error

2009-09-14  Jonathan Pryor  <jpryor@novell.com>

	* zlib-helper.c: support reverse callbacks within MonoTouch.

2009-09-09 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* zconf.h:
	* Makefile.am: attempt to fix the windows GCC build.

2009-09-02  Rodrigo Kumpera  <rkumpera@novell.com>

	* time.c (Mono_Posix_Syscall_nanosleep): Avoid referencing unitialized
	memory.

2009-08-23 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* deflate.c:
	* gzio.c:
	* deflate.h:
	* zutil.h:
	* crc32.c:
	* trees.c: