@@ -1,3 +1,10 @@
+2010-04-02  Jonathan Pryor  <jpryor@novell.com>
+
+	* Makefile.am: On non-Windows platforms, MonoPosixHelper now links
+	  against libmono.so, for mono_runtime_is_shutting_down().
+	* signal.c: Only continue retrying system calls if Mono is NOT
+	  attempting to shut down.  Fixes #592981.
+
 2010-03-29  Zoltan Varga  <vargaz@gmail.com>
 
 	* mph.h: Applied some changes from the openbsd ports tree to fix openbsd
